# position-lib

./: README.md  install_dependencies.sh  position.hpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  compile_in_tu.cpp  position_tests.cpp  use_in_tu.cpp  use_in_tu.h  use_with_namespace.cpp  use_without_namespace.cpp
